add title forum

--- a/mnt/docker/flarum/flarum.env
+++ b/mnt/docker/flarum/flarum.env
@@ -16,3 +16,4 @@ DB_PORT=3306
 FLARUM_ADMIN_USER=admin
 FLARUM_ADMIN_PASS=flarum_itds362
 FLARUM_ADMIN_MAIL=patipat.che@mahidol.edu
+FLARUM_TITLE=ITDS362 Discuss Forum
